# cookiecutter_python_project

./: .gitignore  README.md  cookiecutter.json  make_cookiecutter.sh
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .jupytext.toml  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment-dev.yml  environment.yml  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/conf/: base.yaml  config.yaml
{{cookiecutter.project_slug}}/conf/local/: credentials.yaml.template  paths.yaml.template
{{cookiecutter.project_slug}}/metadata/: deliverables.csv  people.csv  projects.csv
{{cookiecutter.project_slug}}/notebooks/: config.ipynb
{{cookiecutter.project_slug}}/reference/: goals_core.md  goals_extended.md
{{cookiecutter.project_slug}}/setup/: setup_env.sh  setup_utils.sh
{{cookiecutter.project_slug}}/setup/modules/: create_environment.sh  ensure_conda_lock.sh  generate_conda_lock.sh  install_packages.sh  setup_conda.sh  setup_pre_commit.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/config/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/core/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/db/: session.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  seed_manager.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_citation.py  test_config_seed_manager.py  test_core.py  test_ensure_conda_lock.py  test_init.py  test_license_file.py  test_notebook_config.py  test_seed_manager.py  test_setup_env.py  test_setup_env_script.py  test_sqlalchemy_session.py
{{cookiecutter.project_slug}}/tests/setup/: test_setup_conda_module.py
{{cookiecutter.project_slug}}/tests_notebooks/: test_config_notebook.py
{{cookiecutter.project_slug}}/workflow/: README.md
